tests/invalidTest/test_18.q
# EXPECT Error:type cannot be converted
def uint16 test(){

  return 65536
  return 0
}

